--- a/one.html
+++ b/one.html
@@ -44,6 +44,7 @@
   </style>
 </head>
 <body>
+  <a href="two.html">2</a>
   <div class="w-[2567px] h-[3284px] relative overflow-hidden bg-white">
     <p class="absolute left-[71px] top-[50px] italic text-[24px] text-black z-20">
     </h1>
