--- a/two.html
+++ b/two.html
@@ -39,6 +39,7 @@
   </style>
 </head>
 <body>
+  <a href="three.html">3</a>
   <div class="w-[1784px] h-[3284px] relative overflow-hidden bg-white">
     <p class="w-[1045px] h-[22px] absolute left-[-475px] top-0 italic text-left text-black/[0.62]">
       <br /><span class="w-[1045px] h-[22px] text-xs italic text-left text-black/[0.62]"> </span
